--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -12,6 +12,6 @@
       #box
       (keyup.enter)="addNewTrainer(box.value)"
       *ngIf="!inputDisplay"
-    />
+    /><!-- // TODO GTB-3: + keyup.enter绑定使用不错 -->
   </main>
 </section>
